changed in head tag

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!doctype html>
 <html lang="en">
-<head>
+<head>This is an example !
   <meta charset="utf-8">
   <title>Clientattendance</title>
   <base href="/">
@@ -12,3 +12,4 @@
   <app-root></app-root>
 </body>
 </html>
+
